Fixed: FlowLayout shouldn't align itself at center by default.

--- a/src/public/css/construction/distribution/embed.scss
+++ b/src/public/css/construction/distribution/embed.scss
@@ -71,4 +71,5 @@ html, body {
   max-width: 100%;
 	align-content: flex-start;
 	padding: 0;
+	margin: 0;
 }
